# agenticbatch2

./: .gitignore  main.py  pyproject.toml
1-Pydantic/: pydantic.ipynb
2-Langchain Basics/: gettingstartedlandchain.ipynb
2-Langchain Basics/2.2-DataTransformer/: 2.2.1-Recursivetextsplitter.ipynb
